src/test/ui/issues/issue-50599.stderr
error[E0425]: cannot find value `LOG10_2` in module `std::f64`
  --> $DIR/issue-50599.rs:3:48
   |
LL |     const M: usize = (f64::from(N) * std::f64::LOG10_2) as usize;
   |                                                ^^^^^^^ not found in `std::f64`
help: possible candidates are found in other modules, you can import them into scope
   |
LL | use std::f32::consts::LOG10_2;
   |
LL | use std::f64::consts::LOG10_2;
   |

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-50599.rs:4:29
   |
LL |     let mut digits = [0u32; M];
   |                             ^ referenced constant has errors

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0080, E0425.
For more information about an error, try `rustc --explain E0080`.
